# physkit-digitizer

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
examples/: manual_trace.py
src/physkit_digitizer/: __init__.py  calibration.py  curve.py  image.py
tests/physkit_digitizer/: test__physkit_digitizer__import.py
tests/physkit_digitizer/calibration/: test__AxisAlignedLinearCalibration.py
tests/physkit_digitizer/curve/: test__DigitizedCurve.py  test__PixelCurve.py
tests/physkit_digitizer/image/: test__Rasterimage.py
